# b3-projet-full-stack

./: .gitignore  README.md
backend/: .flake8  .pre-commit-config.yaml  README.md  manage.py  manage.py.BAK  pyproject.toml  requirements.txt  schema.yml
backend/reviewcopies/: apps.py  asgi.py  backends.py  permissions.py  wsgi.py
backend/reviewcopies/admin/: __init__.py  auth.py  core.py
backend/reviewcopies/data/: fixtures1.yaml
backend/reviewcopies/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py  0004_alter_user_role.py  0005_alter_user_role.py
backend/reviewcopies/models/: __init__.py  base.py  core.py  user.py
backend/reviewcopies/scripts/: populate_ft1.py
backend/reviewcopies/serializers/: branches.py  courses.py  registrations.py  schedules.py  sessions.py  timeslots.py  users.py
backend/reviewcopies/settings/: base.py  dev.py
backend/reviewcopies/templates/registration/: login.html  logout.html
backend/reviewcopies/tests/hurl/: ft1.hurl
backend/reviewcopies/urls/: __init__.py
backend/reviewcopies/urls/api/: __init__.py
backend/reviewcopies/urls/api/v1/: __init__.py  auth.py  branches.py  courses.py  registrations.py  schedules.py  sessions.py  test.py  timeslots.py  users.py
backend/reviewcopies/views/: branches.py  courses.py  registrations.py  schedules.py  sessions.py  test.py  timeslots.py  users.py
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue
frontend/plugins/: api.ts
proxy/: Caddyfile  Makefile
(+31 files in other folders)
